// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traffic-logger does not log traffic for https://httpbin.org/script.239874.js 1`] = `
[
  [
    "accept-ch",
    "UA,Sec-CH-UA,Sec-CH-UA-Mobile,Sec-CH-UA-Full-Version,Sec-CH-UA-Full-Version-List,Sec-CH-UA-Model,Sec-CH-UA-Platform,Sec-CH-UA-Platform-Version,ECT",
  ],
  [
    "app-version",
    "test-2022-10-11-a3b445d",
  ],
  [
    "cf-cache-status",
    "HIT",
  ],
  [
    "content-type",
    "application/javascript",
  ],
  [
    "strict-transport-security",
    "max-age=31536000; includeSubDomains",
  ],
  [
    "timing-allow-origin",
    "*",
  ],
  [
    "vary",
    "Accept, Accept-Encoding, User-Agent",
  ],
]
`;

exports[`traffic-logger logs traffic for https://httpbin.org/index.html 1`] = `
[
  [
    "accept-ch",
    "UA,Sec-CH-UA,Sec-CH-UA-Mobile,Sec-CH-UA-Full-Version,Sec-CH-UA-Full-Version-List,Sec-CH-UA-Model,Sec-CH-UA-Platform,Sec-CH-UA-Platform-Version,ECT",
  ],
  [
    "app-version",
    "test-2022-10-11-a3b445d",
  ],
  [
    "cf-cache-status",
    "MISS",
  ],
  [
    "content-type",
    "text/html",
  ],
  [
    "strict-transport-security",
    "max-age=31536000; includeSubDomains",
  ],
  [
    "timing-allow-origin",
    "*",
  ],
  [
    "vary",
    "Accept, Accept-Encoding, User-Agent",
  ],
]
`;
